# SimplePELoader

./: .gitignore  CMakeLists.txt  Configure.bat  LICENSE  README.md
Loader/: CMakeLists.txt  Loader.cpp  Loader.h
TestDLL/: CMakeLists.txt  TestDLL.cpp
TestRun/: CMakeLists.txt  TestRun.cpp
