cmake_minimum_required(VERSION 3.0.2)

project( TestRun )

set( SOURCE TestRun.cpp )

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../Loader/" )

add_definitions( "-DBINARY_PATH=\"${CMAKE_LIBRARY_OUTPUT_DIRECTORY}\"" )

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -D_RELEASE=1") 
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -D_MINSIZEREL=1") 
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -D_RELWITHDEBINFO=1" ) 

set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -D_RELEASE=1") 
set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} -D_MINSIZEREL=1") 
set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -D_RELWITHDEBINFO=1" ) 

add_executable( ${PROJECT_NAME} ${SOURCE} )

add_dependencies(${PROJECT_NAME} TestDLL)

target_link_libraries(${PROJECT_NAME} Loader)